--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.1.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "angular2-text-mask": "^9.0.0",
+    "angularx-qrcode": "^2.3.4",
     "bootstrap": "^4.4.0",
     "crypto-js": "^4.0.0",
     "ethers": "^4.0.47",
