--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "angularx-qrcode": "^2.3.4",
     "bootstrap": "^4.4.0",
     "crypto-js": "^4.0.0",
-    "ethers": "^4.0.47",
+    "ethers": "^5.0.2",
     "ngx-custom-validators": "^9.1.0",
     "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
+    "sha3": "^2.1.2",
     "text-mask-addons": "^3.8.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
